Removed time-shift event per-instrument paradigm

--- a/data_to_midi_unified.ipynb
+++ b/data_to_midi_unified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('preprocessed_data_unified/recording175.npy', allow_pickle=True)"
+    "data = np.load('preprocessed_data_unified/recording100.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "for i in instruments:\n",
     "    recording.instruments.append(pretty_midi.Instrument(program=i,name=pretty_midi.program_to_instrument_name(i)))\n",
     "    \n",
-    "curr_time = [0 for channel in range(len(channels))]\n",
+    "curr_time = 0\n",
     "curr_velocity = [96 for channel in range(len(channels))]\n",
     "#start time and velocity of the current note being played\n",
     "note_start = [{} for channels in range(len(channels))]\n",
@@ -52,7 +52,7 @@
     "        if idx in note_start[channel]:\n",
     "            note_same[channel][idx] += 1\n",
     "            continue\n",
-    "        note_start[channel][idx] = curr_time[channel]\n",
+    "        note_start[channel][idx] = curr_time\n",
     "        note_velocity[channel][idx] = curr_velocity[channel]\n",
     "        note_same[channel][idx] = 1\n",
     "    elif idx < 2*num_notes:\n",
@@ -63,7 +63,7 @@
     "            #raise ValueError(\"note\" + str(idx-num_notes) + \"has not been started!\")\n",
     "        note_same[channel][curr_note] -= 1\n",
     "        if note_same[channel][curr_note] == 0:\n",
-    "            note=pretty_midi.Note(velocity=note_velocity[channel][curr_note], pitch=curr_note, start=note_start[channel][curr_note], end=curr_time[channel])\n",
+    "            note=pretty_midi.Note(velocity=note_velocity[channel][curr_note], pitch=curr_note, start=note_start[channel][curr_note], end=curr_time)\n",
     "            recording.instruments[channel].notes.append(note)\n",
     "            del note_start[channel][curr_note]\n",
     "            del note_velocity[channel][curr_note]\n",
@@ -74,12 +74,12 @@
     "        curr_velocity[channel] = int((idx-2*num_notes)*128/num_velocities)\n",
     "    elif idx < 2*num_notes + num_time_shifts + num_velocities:\n",
     "        #time shift event\n",
-    "        curr_time[channel] += (idx - 2*num_notes - num_velocities + 1)*min_time_shift"
+    "        curr_time += (idx - 2*num_notes - num_velocities + 1)*min_time_shift"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,19 +99,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Beethoven/2622_qt07_2.mid\n"
+      "Beethoven/2416_lvbsext3.mid\n"
      ]
     }
    ],
    "source": [
-    "print(res[175])"
+    "print(res[100])"
    ]
   },
   {
