--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -2,23 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Faure\n",
-      "Starting Schubert\n",
       "Starting Cambini\n",
+      "Starting Faure\n",
+      "Starting Brahms\n",
+      "Starting Schubert\n",
+      "Starting Beethoven\n",
+      "Starting Haydn\n",
       "Starting Ravel\n",
       "Starting Bach\n",
-      "Starting Dvorak\n",
-      "Starting Brahms\n",
       "Starting Mozart\n",
-      "Starting Beethoven\n",
-      "Starting Haydn\n"
+      "Starting Dvorak\n"
      ]
     }
    ],
@@ -30,7 +30,8 @@
     "import pickle\n",
     "\n",
     "# See https://jazz-soft.net/demo/GeneralMidi.html for which instrument each number represents\n",
-    "#instruments = [0, 6, 40, 41, 42, 43, 45, 60, 68, 70, 71, 73]\n",
+    "instrument_numbers = [0, 6, 40, 41, 42, 43, 45, 60, 68, 70, 71, 73]\n",
+    "num_instruments = len(instrument_numbers)\n",
     "\n",
     "num_notes = 128 # Number of pitches in MIDI\n",
     "\n",
@@ -93,26 +94,20 @@
     "    return 2*num_notes + num_velocities + time_shift\n",
     "\n",
     "# append_time_shift: appends a time shift event to the data array. If the time\n",
-    "# shift is too large, split it into multiple small time shifts. Also appends\n",
-    "# time events\n",
+    "# shift is too large, split it into multiple small time shifts\n",
     "# ARGUMENTS\n",
     "# data: time shift events will be appended to this list\n",
-    "# times: times of events will be appended to this list\n",
-    "# time: time of first event\n",
     "# time_shift: amount of time to shift\n",
-    "def append_time_shift(data, times, time, time_shift):\n",
+    "def append_time_shift(data, time_shift):\n",
     "    time_shift = quantize_time_shift(time_shift)\n",
     "    \n",
     "    # Split large time shifts into multiple small time shifts\n",
     "    while (time_shift >= num_time_shifts):\n",
     "        data.append(time_shift_event(num_time_shifts - 1))\n",
-    "        times.append(time)\n",
-    "        time += min_time_shift*num_time_shifts\n",
     "        time_shift -= (num_time_shifts - 1)\n",
     "\n",
     "    if (time_shift >= 0):\n",
     "        data.append(time_shift_event(time_shift))\n",
-    "        times.append(time)\n",
     "    \n",
     "base_path = 'musicnet_midis/'\n",
     "\n",
@@ -158,14 +153,11 @@
     "            \n",
     "                # We need to turn off a note\n",
     "                while off_queue and note.start > off_queue[0][0]:\n",
-    "                    append_time_shift(data, times, time, off_queue[0][0] - time)\n",
     "                    data.append(note_off_event(off_queue[0][1]))\n",
     "                    time = off_queue[0][0]\n",
     "                    times.append(time)\n",
     "                    heapq.heappop(off_queue)\n",
     "                    \n",
-    "                # Time shift until we reach the start of this note\n",
-    "                append_time_shift(data, times, time, note.start - time)\n",
     "                time = note.start\n",
     "                    \n",
     "                velocity = quantize_velocity(note.velocity)\n",
@@ -184,7 +176,6 @@
     "                if n == len(instrument.notes) - 1:\n",
     "                    # No more notes left. Flush the off queue\n",
     "                    while off_queue:\n",
-    "                        append_time_shift(data, times, time, off_queue[0][0] - time)\n",
     "                        data.append(note_off_event(off_queue[0][1]))\n",
     "                        time = off_queue[0][0]\n",
     "                        times.append(time)\n",
@@ -203,10 +194,33 @@
     "        \n",
     "        sort_idx = np.argsort(times, kind='mergesort')\n",
     "        \n",
-    "        data = np.expand_dims(data[sort_idx], 1)\n",
-    "        instruments = np.expand_dims(instruments[sort_idx], 1)\n",
-    "        channels = np.expand_dims(channels[sort_idx], 1)\n",
-    "        data = np.concatenate((data, instruments, channels), axis=1)\n",
+    "        data = data[sort_idx]\n",
+    "        instruments = instruments[sort_idx]\n",
+    "        channels = channels[sort_idx]\n",
+    "        times = times[sort_idx]\n",
+    "        \n",
+    "        data_with_tshifts = []\n",
+    "        instruments_with_tshifts = []\n",
+    "        channels_with_tshifts = []\n",
+    "        \n",
+    "        num_channels = np.amax(channels) + 1\n",
+    "        \n",
+    "        for m in range(data.shape[0] - 1):\n",
+    "            data_with_tshifts.append(data[m])\n",
+    "            instruments_with_tshifts.append(instruments[m])\n",
+    "            channels_with_tshifts.append(channels[m])\n",
+    "            if times[m] != times[m + 1]:\n",
+    "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
+    "                num_append = len(data_with_tshifts) - len(instruments_with_tshifts)\n",
+    "                \n",
+    "                # We treat the time shift event as a separate instrument\n",
+    "                instruments_with_tshifts = instruments_with_tshifts + [num_instruments for i in range(num_append)]\n",
+    "                channels_with_tshifts = channels_with_tshifts + [num_channels for i in range(num_append)]\n",
+    "\n",
+    "        data_with_tshifts = np.expand_dims(np.array(data_with_tshifts), 1)\n",
+    "        instruments_with_tshifts = np.expand_dims(np.array(instruments_with_tshifts), 1)\n",
+    "        channels_with_tshifts = np.expand_dims(np.array(channels_with_tshifts), 1)\n",
+    "        data = np.concatenate((data_with_tshifts, instruments_with_tshifts, channels_with_tshifts), axis=1)\n",
     "        np.save('preprocessed_data_unified/recording' + str(fnum) + '.npy', data)\n",
     "        \n",
     "        data_fnames.append(composer + '/' + fname)\n",
