Modified unified preprocess and wrote train_unified

--- a/data_to_midi_unified.ipynb
+++ b/data_to_midi_unified.ipynb
@@ -18,24 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('preprocessed_data_unified/recording100.npy', allow_pickle=True)"
+    "data = np.load('test_history.npy', allow_pickle=True)\n",
+    "instruments = np.load('test_instruments.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "recording = pretty_midi.PrettyMIDI()\n",
     "\n",
     "# Note that channels are sorted by np.unique\n",
-    "channels, idx = np.unique(data[:, 2], return_index=True, axis=0)\n",
-    "instruments = data[idx, 1]\n",
+    "channels, idx = np.unique(data[:, 1], return_index=True, axis=0)\n",
     "for i in instruments:\n",
     "    recording.instruments.append(pretty_midi.Instrument(program=i,name=pretty_midi.program_to_instrument_name(i)))\n",
     "    \n",
@@ -46,7 +46,7 @@
     "note_velocity = [{} for channel in range(len(channels))]\n",
     "note_same = [{} for channel in range(len(channels))]\n",
     "for m, idx in enumerate(data[:, 0]):\n",
-    "    channel = data[m, 2]\n",
+    "    channel = data[m, 1]\n",
     "    if idx < num_notes:\n",
     "        #note on event\n",
     "        if idx in note_start[channel]:\n",
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recording.write(\"beethoven_test_midi.mid\")"
+    "recording.write(\"test_midi.mid\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
