--- a/preprocess_unified.ipynb
+++ b/preprocess_unified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -123,13 +123,14 @@
     "            # There are 7 files that cause an IO error, both with mido and pretty_midi. Haven't looked into why\n",
     "            continue\n",
     "        \n",
-    "        # We'll store the final data in an Lx3 numpy array, where L is the total number of messages. Along the second dimension,\n",
-    "        # the first element is the message number, the second element is the instrument program number, and the third\n",
-    "        # element is the channel number\n",
+    "        # We'll save the final data in an Lx2 numpy array, where L is the total number of messages. Along the second dimension,\n",
+    "        # the first element is the message number, and the second element is the channel number\n",
+    "        \n",
+    "        # We also save an instruments array where element i contains the instrument program number associated with channel i\n",
+    "        instruments = []\n",
     "        \n",
     "        # First we store lists and convert to numpy arrays later\n",
     "        data = []\n",
-    "        instruments = []\n",
     "        channels = []\n",
     "        \n",
     "        # Store the time of each message. These won't appear in the final data array\n",
@@ -181,47 +182,45 @@
     "                        times.append(time)\n",
     "                        heapq.heappop(off_queue)\n",
     "                        \n",
-    "            new_messages = len(data) - len(instruments)\n",
-    "            instruments = instruments + [instrument.program for n in range(new_messages)]\n",
+    "            new_messages = len(data) - len(channels)\n",
     "            channels = channels + [i for n in range(new_messages)]\n",
+    "            instruments.append(instrument.program)\n",
     "            \n",
     "            assert(len(times) == len(data))\n",
     "        \n",
     "        data = np.array(data, dtype=np.long)\n",
-    "        instruments = np.array(instruments, dtype=np.long)\n",
     "        channels = np.array(channels, dtype=np.long)\n",
     "        times = np.array(times, dtype=np.float)\n",
+    "        \n",
+    "        instruments = np.array(instruments, dtype=np.long)\n",
     "        \n",
     "        sort_idx = np.argsort(times, kind='mergesort')\n",
     "        \n",
     "        data = data[sort_idx]\n",
-    "        instruments = instruments[sort_idx]\n",
     "        channels = channels[sort_idx]\n",
     "        times = times[sort_idx]\n",
     "        \n",
     "        data_with_tshifts = []\n",
-    "        instruments_with_tshifts = []\n",
     "        channels_with_tshifts = []\n",
     "        \n",
+    "        # We treat the time shift event as a separate instrument/channel\n",
     "        num_channels = np.amax(channels) + 1\n",
     "        \n",
     "        for m in range(data.shape[0] - 1):\n",
     "            data_with_tshifts.append(data[m])\n",
-    "            instruments_with_tshifts.append(instruments[m])\n",
     "            channels_with_tshifts.append(channels[m])\n",
     "            if times[m] != times[m + 1]:\n",
     "                append_time_shift(data_with_tshifts, times[m + 1] - times[m])\n",
-    "                num_append = len(data_with_tshifts) - len(instruments_with_tshifts)\n",
+    "                num_append = len(data_with_tshifts) - len(channels_with_tshifts)\n",
     "                \n",
     "                # We treat the time shift event as a separate instrument\n",
-    "                instruments_with_tshifts = instruments_with_tshifts + [num_instruments for i in range(num_append)]\n",
     "                channels_with_tshifts = channels_with_tshifts + [num_channels for i in range(num_append)]\n",
     "\n",
     "        data_with_tshifts = np.expand_dims(np.array(data_with_tshifts), 1)\n",
-    "        instruments_with_tshifts = np.expand_dims(np.array(instruments_with_tshifts), 1)\n",
     "        channels_with_tshifts = np.expand_dims(np.array(channels_with_tshifts), 1)\n",
-    "        data = np.concatenate((data_with_tshifts, instruments_with_tshifts, channels_with_tshifts), axis=1)\n",
+    "        data = np.concatenate((data_with_tshifts, channels_with_tshifts), axis=1)\n",
     "        np.save('preprocessed_data_unified/recording' + str(fnum) + '.npy', data)\n",
+    "        np.save('preprocessed_data_unified/instruments' + str(fnum) + '.npy', instruments)\n",
     "        \n",
     "        data_fnames.append(composer + '/' + fname)\n",
     "        fnum += 1\n",
