Modified train_unified comment

--- a/train_unified.ipynb
+++ b/train_unified.ipynb
@@ -61,8 +61,8 @@
     "        \n",
     "\n",
     "# EnsembleTransformer: takes a history of MIDI messages \n",
-    "# for instruments in an ensemble and generates a distribution for the next message\n",
-    "# for a specific instrument\n",
+    "# for instruments in an ensemble and generates a distribution for the next message,\n",
+    "# as well as the instrument who should issue the message\n",
     "class EnsembleTransformer(torch.nn.Module):\n",
     "    # CONSTRUCTOR\n",
     "    # ARGUMENTS\n",
