Modified loss calculation in train_unified

--- a/train_unified.ipynb
+++ b/train_unified.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "        tgt_mask.fill_diagonal_(False)\n",
     "        \n",
     "        # No encoder, so no memory\n",
-    "        memory = torch.zeros((1, B, self.decoder_input_dim))\n",
+    "        memory = torch.ones((1, B, self.decoder_input_dim))\n",
     "        \n",
     "        tgt_key_padding_mask = mask.transpose(0, 1)\n",
     "        decoding = self.decoder(inputs, memory, tgt_mask=tgt_mask, tgt_key_padding_mask=tgt_key_padding_mask)\n",
@@ -151,7 +151,7 @@
     "        # CxLxBxD\n",
     "        inst_queries = self.inst_query(decoding).unsqueeze(0).expand(C, -1, -1, -1)\n",
     "        \n",
-    "        prods = inst_queries*inst_embed.unsqueeze(1).expand(-1, L, -1, -1)/self.embed_dim\n",
+    "        prods = inst_queries*self.position_encoding(inst_embed).unsqueeze(1).expand(-1, L, -1, -1)/self.embed_dim\n",
     "        \n",
     "        # Dot-product attention (LxBxC)\n",
     "        channel_dist = torch.sum(prods, dim=3).permute(1, 2, 0)\n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +206,346 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting epoch 0\n",
+      "Loss: 7.689164\n",
+      "Starting epoch 1\n",
+      "Loss: 5.497065\n",
+      "Starting epoch 2\n",
+      "Loss: 5.151967\n",
+      "Starting epoch 3\n",
+      "Loss: 4.922511\n",
+      "Starting epoch 4\n",
+      "Loss: 4.550541\n",
+      "Starting epoch 5\n",
+      "Loss: 4.270918\n",
+      "Starting epoch 6\n",
+      "Loss: 4.170362\n",
+      "Starting epoch 7\n",
+      "Loss: 4.114559\n",
+      "Starting epoch 8\n",
+      "Loss: 4.153576\n",
+      "Starting epoch 9\n",
+      "Loss: 4.109065\n",
+      "Starting epoch 10\n",
+      "Loss: 4.041800\n",
+      "Starting epoch 11\n",
+      "Loss: 4.040359\n",
+      "Starting epoch 12\n",
+      "Loss: 4.070396\n",
+      "Starting epoch 13\n",
+      "Loss: 4.086609\n",
+      "Starting epoch 14\n",
+      "Loss: 4.077425\n",
+      "Starting epoch 15\n",
+      "Loss: 4.050911\n",
+      "Starting epoch 16\n",
+      "Loss: 4.024955\n",
+      "Starting epoch 17\n",
+      "Loss: 4.015656\n",
+      "Starting epoch 18\n",
+      "Loss: 4.023703\n",
+      "Starting epoch 19\n",
+      "Loss: 4.030677\n",
+      "Starting epoch 20\n",
+      "Loss: 4.023449\n",
+      "Starting epoch 21\n",
+      "Loss: 4.010141\n",
+      "Starting epoch 22\n",
+      "Loss: 4.002806\n",
+      "Starting epoch 23\n",
+      "Loss: 4.002307\n",
+      "Starting epoch 24\n",
+      "Loss: 4.003944\n",
+      "Starting epoch 25\n",
+      "Loss: 4.005427\n",
+      "Starting epoch 26\n",
+      "Loss: 4.006385\n",
+      "Starting epoch 27\n",
+      "Loss: 4.006069\n",
+      "Starting epoch 28\n",
+      "Loss: 4.003937\n",
+      "Starting epoch 29\n",
+      "Loss: 4.000935\n",
+      "Starting epoch 30\n",
+      "Loss: 3.998765\n",
+      "Starting epoch 31\n",
+      "Loss: 3.998184\n",
+      "Starting epoch 32\n",
+      "Loss: 3.998501\n",
+      "Starting epoch 33\n",
+      "Loss: 3.998266\n",
+      "Starting epoch 34\n",
+      "Loss: 3.996521\n",
+      "Starting epoch 35\n",
+      "Loss: 3.993913\n",
+      "Starting epoch 36\n",
+      "Loss: 3.992121\n",
+      "Starting epoch 37\n",
+      "Loss: 3.992044\n",
+      "Starting epoch 38\n",
+      "Loss: 3.992994\n",
+      "Starting epoch 39\n",
+      "Loss: 3.993604\n",
+      "Starting epoch 40\n",
+      "Loss: 3.993148\n",
+      "Starting epoch 41\n",
+      "Loss: 3.992022\n",
+      "Starting epoch 42\n",
+      "Loss: 3.991179\n",
+      "Starting epoch 43\n",
+      "Loss: 3.991076\n",
+      "Starting epoch 44\n",
+      "Loss: 3.991243\n",
+      "Starting epoch 45\n",
+      "Loss: 3.990986\n",
+      "Starting epoch 46\n",
+      "Loss: 3.990243\n",
+      "Starting epoch 47\n",
+      "Loss: 3.989471\n",
+      "Starting epoch 48\n",
+      "Loss: 3.989001\n",
+      "Starting epoch 49\n",
+      "Loss: 3.988790\n",
+      "Starting epoch 50\n",
+      "Loss: 3.988658\n",
+      "Starting epoch 51\n",
+      "Loss: 3.988549\n",
+      "Starting epoch 52\n",
+      "Loss: 3.988468\n",
+      "Starting epoch 53\n",
+      "Loss: 3.988351\n",
+      "Starting epoch 54\n",
+      "Loss: 3.988120\n",
+      "Starting epoch 55\n",
+      "Loss: 3.987822\n",
+      "Starting epoch 56\n",
+      "Loss: 3.987604\n",
+      "Starting epoch 57\n",
+      "Loss: 3.987508\n",
+      "Starting epoch 58\n",
+      "Loss: 3.987401\n",
+      "Starting epoch 59\n",
+      "Loss: 3.987154\n",
+      "Starting epoch 60\n",
+      "Loss: 3.986822\n",
+      "Starting epoch 61\n",
+      "Loss: 3.986581\n",
+      "Starting epoch 62\n",
+      "Loss: 3.986505\n",
+      "Starting epoch 63\n",
+      "Loss: 3.986488\n",
+      "Starting epoch 64\n",
+      "Loss: 3.986406\n",
+      "Starting epoch 65\n",
+      "Loss: 3.986243\n",
+      "Starting epoch 66\n",
+      "Loss: 3.986078\n",
+      "Starting epoch 67\n",
+      "Loss: 3.985964\n",
+      "Starting epoch 68\n",
+      "Loss: 3.985879\n",
+      "Starting epoch 69\n",
+      "Loss: 3.985770\n",
+      "Starting epoch 70\n",
+      "Loss: 3.985634\n",
+      "Starting epoch 71\n",
+      "Loss: 3.985498\n",
+      "Starting epoch 72\n",
+      "Loss: 3.985373\n",
+      "Starting epoch 73\n",
+      "Loss: 3.985267\n",
+      "Starting epoch 74\n",
+      "Loss: 3.985187\n",
+      "Starting epoch 75\n",
+      "Loss: 3.985120\n",
+      "Starting epoch 76\n",
+      "Loss: 3.985044\n",
+      "Starting epoch 77\n",
+      "Loss: 3.984944\n",
+      "Starting epoch 78\n",
+      "Loss: 3.984846\n",
+      "Starting epoch 79\n",
+      "Loss: 3.984769\n",
+      "Starting epoch 80\n",
+      "Loss: 3.984703\n",
+      "Starting epoch 81\n",
+      "Loss: 3.984626\n",
+      "Starting epoch 82\n",
+      "Loss: 3.984529\n",
+      "Starting epoch 83\n",
+      "Loss: 3.984438\n",
+      "Starting epoch 84\n",
+      "Loss: 3.984372\n",
+      "Starting epoch 85\n",
+      "Loss: 3.984318\n",
+      "Starting epoch 86\n",
+      "Loss: 3.984255\n",
+      "Starting epoch 87\n",
+      "Loss: 3.984186\n",
+      "Starting epoch 88\n",
+      "Loss: 3.984120\n",
+      "Starting epoch 89\n",
+      "Loss: 3.984062\n",
+      "Starting epoch 90\n",
+      "Loss: 3.984005\n",
+      "Starting epoch 91\n",
+      "Loss: 3.983946\n",
+      "Starting epoch 92\n",
+      "Loss: 3.983889\n",
+      "Starting epoch 93\n",
+      "Loss: 3.983830\n",
+      "Starting epoch 94\n",
+      "Loss: 3.983775\n",
+      "Starting epoch 95\n",
+      "Loss: 3.983723\n",
+      "Starting epoch 96\n",
+      "Loss: 3.983675\n",
+      "Starting epoch 97\n",
+      "Loss: 3.983632\n",
+      "Starting epoch 98\n",
+      "Loss: 3.983586\n",
+      "Starting epoch 99\n",
+      "Loss: 3.983536\n",
+      "Starting epoch 100\n",
+      "Loss: 3.983493\n",
+      "Starting epoch 101\n",
+      "Loss: 3.983454\n",
+      "Starting epoch 102\n",
+      "Loss: 3.983413\n",
+      "Starting epoch 103\n",
+      "Loss: 3.983370\n",
+      "Starting epoch 104\n",
+      "Loss: 3.983328\n",
+      "Starting epoch 105\n",
+      "Loss: 3.983293\n",
+      "Starting epoch 106\n",
+      "Loss: 3.983255\n",
+      "Starting epoch 107\n",
+      "Loss: 3.983222\n",
+      "Starting epoch 108\n",
+      "Loss: 3.983187\n",
+      "Starting epoch 109\n",
+      "Loss: 3.983153\n",
+      "Starting epoch 110\n",
+      "Loss: 3.983121\n",
+      "Starting epoch 111\n",
+      "Loss: 3.983091\n",
+      "Starting epoch 112\n",
+      "Loss: 3.983060\n",
+      "Starting epoch 113\n",
+      "Loss: 3.983032\n",
+      "Starting epoch 114\n",
+      "Loss: 3.983003\n",
+      "Starting epoch 115\n",
+      "Loss: 3.982975\n",
+      "Starting epoch 116\n",
+      "Loss: 3.982949\n",
+      "Starting epoch 117\n",
+      "Loss: 3.982924\n",
+      "Starting epoch 118\n",
+      "Loss: 3.982899\n",
+      "Starting epoch 119\n",
+      "Loss: 3.982877\n",
+      "Starting epoch 120\n",
+      "Loss: 3.982852\n",
+      "Starting epoch 121\n",
+      "Loss: 3.982831\n",
+      "Starting epoch 122\n",
+      "Loss: 3.982807\n",
+      "Starting epoch 123\n",
+      "Loss: 3.982786\n",
+      "Starting epoch 124\n",
+      "Loss: 3.982768\n",
+      "Starting epoch 125\n",
+      "Loss: 3.982749\n",
+      "Starting epoch 126\n",
+      "Loss: 3.982730\n",
+      "Starting epoch 127\n",
+      "Loss: 3.982710\n",
+      "Starting epoch 128\n",
+      "Loss: 3.982694\n",
+      "Starting epoch 129\n",
+      "Loss: 3.982674\n",
+      "Starting epoch 130\n",
+      "Loss: 3.982658\n",
+      "Starting epoch 131\n",
+      "Loss: 3.982643\n",
+      "Starting epoch 132\n",
+      "Loss: 3.982628\n",
+      "Starting epoch 133\n",
+      "Loss: 3.982614\n",
+      "Starting epoch 134\n",
+      "Loss: 3.982599\n",
+      "Starting epoch 135\n",
+      "Loss: 3.982585\n",
+      "Starting epoch 136\n",
+      "Loss: 3.982571\n",
+      "Starting epoch 137\n",
+      "Loss: 3.982559\n",
+      "Starting epoch 138\n",
+      "Loss: 3.982547\n",
+      "Starting epoch 139\n",
+      "Loss: 3.982533\n",
+      "Starting epoch 140\n",
+      "Loss: 3.982523\n",
+      "Starting epoch 141\n",
+      "Loss: 3.982513\n",
+      "Starting epoch 142\n",
+      "Loss: 3.982499\n",
+      "Starting epoch 143\n",
+      "Loss: 3.982490\n",
+      "Starting epoch 144\n",
+      "Loss: 3.982481\n",
+      "Starting epoch 145\n",
+      "Loss: 3.982469\n",
+      "Starting epoch 146\n",
+      "Loss: 3.982460\n",
+      "Starting epoch 147\n",
+      "Loss: 3.982450\n",
+      "Starting epoch 148\n",
+      "Loss: 3.982442\n",
+      "Starting epoch 149\n",
+      "Loss: 3.982434\n",
+      "Starting epoch 150\n",
+      "Loss: 3.982425\n",
+      "Starting epoch 151\n",
+      "Loss: 3.982418\n",
+      "Starting epoch 152\n",
+      "Loss: 3.982410\n",
+      "Starting epoch 153\n",
+      "Loss: 3.982403\n",
+      "Starting epoch 154\n",
+      "Loss: 3.982395\n",
+      "Starting epoch 155\n",
+      "Loss: 3.982389\n",
+      "Starting epoch 156\n",
+      "Loss: 3.982382\n",
+      "Starting epoch 157\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-eaa57ee7b81d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     \u001b[0mtrain_losses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Loss: %f'\u001b[0m \u001b[0;34m%\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/autograd/grad_mode.py\u001b[0m in \u001b[0;36mdecorate_context\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mdecorate_context\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/torch/optim/adam.py\u001b[0m in \u001b[0;36mstep\u001b[0;34m(self, closure)\u001b[0m\n\u001b[1;32m    105\u001b[0m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmax_exp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbias_correction2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m                     \u001b[0mdenom\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mexp_avg_sq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbias_correction2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eps'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m                 \u001b[0mstep_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgroup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'lr'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mbias_correction1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "recording = np.load('preprocessed_data_unified/recording318.npy', allow_pickle=True)\n",
     "instruments_np = np.load('preprocessed_data_unified/instruments318.npy', allow_pickle=True)\n",
@@ -394,20 +729,30 @@
     "# sample['mask']: an LxB tensor containing False where a message is\n",
     "# valid, and True where it isn't (accounts for variable length sequences\n",
     "# and zero padding)\n",
+    "# sample['nchan']: a length B tensor containing the number of channels for each batch\n",
+    "# element (including the dummy time-shift channel)\n",
     "def collate_fn(batch):\n",
     "    batch_size = len(batch)\n",
     "    \n",
-    "    # We size our tensors to accomodate the longest sequence and the largest ensemble\n",
-    "    max_channels = max([instance['instruments'].shape[0] for instance in batch])\n",
+    "    # We size our tensors to accomodate the longest sequence and the largest number of channels\n",
+    "    # (including the dummy time shift channel)\n",
+    "    max_channels = max([instance['instruments'].shape[0] for instance in batch]) + 1\n",
     "    longest_len = max([instance['history'].shape[0] for instance in batch])\n",
     "\n",
     "    sample = {'history': torch.zeros((longest_len, batch_size, 2), dtype=torch.long), \\\n",
     "              'instruments': torch.zeros((max_channels, batch_size), dtype=torch.long), \\\n",
-    "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool)}\n",
+    "              'mask': torch.ones((longest_len, batch_size), dtype=torch.bool), \\\n",
+    "              'nchan': torch.zeros(batch_size, dtype=torch.long)}\n",
     "\n",
     "    for b, instance in enumerate(batch):\n",
     "        instrument_idx = [instrument_numbers.index(i) for i in instance['instruments']]\n",
+    "        \n",
     "        sample['instruments'][:len(instrument_idx), b] = torch.tensor(instrument_idx, dtype=torch.long)\n",
+    "        # Add dummy channel\n",
+    "        sample['instruments'][len(instrument_idx), b] = num_instruments\n",
+    "        \n",
+    "        # +1 to account for udmmy channel\n",
+    "        sample['nchan'][b] = len(instrument_idx) + 1\n",
     "        \n",
     "        seq_length = instance['history'].shape[0]\n",
     "        sample['history'][:seq_length, b] = torch.tensor(instance['history'], dtype=torch.long)\n",
@@ -465,7 +810,7 @@
     "dataset = MIDIDataset('preprocessed_data_unified')\n",
     "dataloader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, shuffle=True, collate_fn=collate_fn)\n",
     "\n",
-    "loss_fn = torch.nn.CrossEntropyLoss()\n",
+    "loss_fn = torch.nn.CrossEntropyLoss(reduction='sum')\n",
     "epochs = 20\n",
     "train_losses = np.zeros(epochs)\n",
     "test_losses = np.zeros(epochs) # TODO: train/test split\n",
@@ -486,11 +831,20 @@
     "        \n",
     "        target_mask = torch.logical_not(batch['mask'][1:])\n",
     "        \n",
+    "        num_valid_targets = target_mask.sum()\n",
+    "        \n",
     "        target_messages = batch['history'][1:, :, 0][target_mask]\n",
-    "        target_channels = batch['history'][1:, :, 1][target_mask]\n",
     "    \n",
-    "        loss = loss_fn(message_logits[target_mask], target_messages) + \\\n",
-    "               loss_fn(channel_logits[target_mask], target_channels)\n",
+    "        message_loss = loss_fn(message_logits[target_mask], target_messages)/num_valid_targets\n",
+    "        \n",
+    "        channel_losses = torch.zeros(batch_size)\n",
+    "        \n",
+    "        for i in range(batch_size):\n",
+    "            channel_logits_i = channel_logits[:, :, :batch['nchan'][i]][target_mask]\n",
+    "            target_channels = batch['history'][1:, i, 1][target_mask]\n",
+    "            channel_losses[i] = loss_fn(channel_logits_i, target_channels)/num_valid_targets\n",
+    "            \n",
+    "        loss = message_loss + channel_losses\n",
     "\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
